# monte-carlo-grain-growth

./: README.md  grain-growth.m  normal-grain-growth.m
normal_grain_growth/: CMakeLists.txt  README.md
normal_grain_growth/include/: main.h
normal_grain_growth/src/: CMakeLists.txt  main.cpp
